Adds option for JSON reader to allow invalid utf characters

This way reading in bookmarks files won't throw out everything if a
bogus utf8 character was written.

BUG=656115
TEST=covered by test
R=brettw@chromium.org, stevenjb@chromium.org
TBR=stevenjb@chromium.org

Review-Url: https://codereview.chromium.org/2475583002
Cr-Commit-Position: refs/heads/master@{#431433}

Former-commit-id: cc7f72dcbc3953587ffe9706601f8d09e8d81481