chrome/browser/ui/app_list/start_page_service.cc
@@ -10,6 +10,7 @@
 
 #include "base/bind.h"
 #include "base/command_line.h"
+#include "base/json/json_reader.h"
 #include "base/json/json_string_value_serializer.h"
 #include "base/macros.h"
 #include "base/memory/singleton.h"
@@ -656,8 +657,8 @@ void StartPageService::OnURLFetchComplete(const net::URLFetcher* source) {
   if (json_start_index != std::string::npos)
     json_data_substr.remove_prefix(json_start_index);
 
-  JSONStringValueDeserializer deserializer(json_data_substr);
-  deserializer.set_allow_trailing_comma(true);
+  JSONStringValueDeserializer deserializer(json_data_substr,
+                                           base::JSON_ALLOW_TRAILING_COMMAS);
   int error_code = 0;
   std::unique_ptr<base::Value> doodle_json =
       deserializer.Deserialize(&error_code, nullptr);
